# rundoc

./: .gitignore  LICENSE  README.md  rundoc.cabal
src/Metropolis/: Interpreter.hs  Types.hs  Worker.hs
src/Text/: Rundoc.hs
tests/: rundoc-tests.hs
tests/Metropolis/Worker/: Tests.hs
utils/: RundocFilter.hs
